# CLARA

./: .gitignore  README.md  docker-compose.yml  flake.nix  test.json
.github/workflows/: ci.yml
back/: .env.example  Dockerfile  README.md  openapi.json  openrouter_activity_2025-12-19.csv  pyproject.toml  telemetrics.csv  test.py
back/data/: medical.db
back/src/: main.py
back/src/agents/: agent.py  critic.py  evaluation.py  executor.py  memory.py  oncology_agent.py  planner.py  reactive.py  telemetrics.py  vision.py
back/src/core/: llm_client.py  models.py  task.py
back/src/tools/: __init__.py  classification.py  database_tool.py  knowledge_tool.py  vision_tool.py
demo/: fake_input.py  flake.nix
front/: .dockerignore  Caddyfile  Dockerfile  GEMINI.md  README.md  deno.json  index.html  next.config.mjs  package.json  pyproject.toml  tsconfig.json  vite.config.ts
front/app/: globals.css  layout.tsx  page.tsx
front/components/: medical-ai-chat.tsx
front/components/agent-graph/: agent-node-list.tsx  mermaid-graph.tsx
front/components/chat/: chat-message.tsx  streaming-message.tsx
front/components/ui/: scroll-area.tsx
front/src/: App.tsx  app.py  index.css
front/src/components/: medical-ai-chat.tsx
front/src/components/agent-graph/: agent-graph-panel.tsx  agent-node-list.tsx  mermaid-graph.tsx  metrics-panel.tsx
front/src/hooks/: use-toast.ts
front/src/lib/: api.ts  mock-data.ts  types.ts
front/src/types/: global.d.ts
report/: main.typ
report/scripts/: generate_arch.py  generate_graphs.py
slides/: main.typ
(+45 files in other folders)
